<resources>
    <string name="app_name">Lab03</string>
    <!-- String related to shared preferences -->
    <string name="preference_user_key">com.example.lab03</string>
    <string name="preference_user_key_default">none</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Loguearse</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">La contraseña es muy corta</string>
    <string name="login_failed">"Login failed"</string>

    <string name="error_invalid_email">El usuario es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gestión Academica</string>
    <string name="nav_header_subtitle">www.gestionAcademica.una.ac.cr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="action_search">Buscar</string>

    <string name="my_curso">Cursos</string>
    <string name="my_profesor">Profesores</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_nav_drawer">Menú de navegación</string>

    <string name="labelACurso">Datos de Curso</string>
    <string name="labelAProfesor">Datos de Profesor</string>

    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>

    <!--Formulario Update Curso-->
    <string name="tvTituloUpdateCurso">Actualización Curso</string>
    <string name="tvCodigo">Codigo:</string>
    <string name="tvCodCarrera">Codigo de Carrera:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="tvCreditos">Creditos: </string>
    <string name="tvAnio">Año:</string>
    <string name="tvCiclo">Ciclo:</string>
    <string name="tvHorasSemanales">Horas semanales:</string>
    <string name="tvProfesor">Profesor:</string>

    <string name="etCodigo">Codigo</string>
    <string name="etNombre">Nombre</string>
    <string name="etCreditos">Creditos</string>
    <string name="etAnio">Año</string>
    <string name="etCiclo">Ciclo</string>
    <string name="etHorasSemanales">Horas Semanales</string>


</resources>
